<resources>
    <string name="app_name" translatable="false">Vocabulario</string>
    <string name="next">Continue</string>
    <string name="check_entries_dialog_text">Suggestions will auto-complete the French word you type to the corresponding translation in Spanish, without you doing anything. If you want to activate it, you will need to download a translation package that we will use to translate words.</string>
    <string name="download_failed">Download failed</string>
    <string name="download_failed_description">The download of the translation package failed. Please check if you are connected to a Wi-Fi access point, and that you have access to the Internet, and retry.</string>
    <string name="retry">Retry</string>
    <string name="preparing_app">Setting up…</string>
    <string name="next_setup">Next</string>
    <string name="back">Back</string>
    <string name="app_description">Learn your Spanish words quickly and easily</string>
    <string name="level">Choose your level</string>
    <string name="level_n_very_easy">Super easy</string>
    <string name="level_n_easy">Easy</string>
    <string name="level_n_medium">Average (Recommended)</string>
    <string name="level_n_hard">Hard</string>
    <string name="level_n_super_hard">Super hard</string>
    <string name="level_choice_description">The highest level you choose, the more questions there will be in each quiz. If you choose an easy level, there will be less questions, but you will train more. That\'s why we recommend you to choose a level adapted to yourself, the way you work, and the way you remember things.</string>
    <string name="level_key_preferences" translatable="false">level</string>
    <string name="good_morning" translatable="false">¡Buenos días,</string>
    <string name="good_night" translatable="false">¡Buenas noches,</string>
    <string name="good_afternoon" translatable="false">¡Buenas tardes,</string>
    <string name="main_text_presentation">What are we going to do today?</string>
    <string name="fatal_error_title">Vocabulario encourted an error and crashed the last time you used it. You can retry, or reset Vocabulario\'s data if it doesn\'t work. If it still doesn\'t work, erase the data from your phone\'s Settings.</string>
    <string name="error_report_reas">An error report has been sent to us, and we will use it to repair the problem in an update, if the problem comes from our app. This report does not contain personal information, nor information used to identify you.</string>
    <string name="continue_to_app">Continue to Vocabulario</string>
    <string name="reset_data">Reset Vocabulario\'s data</string>
    <string name="open_settings">Open Vocabulario\'s settings page</string>
    <string name="delete_data_confirm_dialog">Are you sure you want to delete the data?</string>
    <string name="delete_data_confirm_dialog_descr">This will delete all Vocabulario\'s data, including all the words you added to your Collection, your settings, your user profile, and many more.</string>
    <string name="cancel">Cancel</string>
    <string name="delete_data">Delete data</string>
    <string name="policies_title">End-User License Agreement</string>
    <string name="settings">Settings</string>
    <string name="settings_description">Personalize Vocabulario the way you want</string>
    <string name="general">General</string>
    <string name="activate_suggestions_settings">Enable Suggestions</string>
    <string name="level_settings">Level settings</string>
    <string name="rev_settings">Revisions</string>
    <string name="enable_revs">Let me know when a review of the vocabulary is recommended</string>
    <string name="voc_rev_reminder_service_description">Vocabulary revision reminder service</string>
    <string name="reminder_level_influence_descr">The level you chose might influence this option.</string>
    <string name="change_level">Change level</string>
    <string name="level_descr">The level helps you learn your vocabulary depending on how you learn things. You can change below.</string>
    <string name="chosen_level">Current level: Average</string>
    <string name="app_settings">App Settings</string>
    <string name="ver_info">Version information</string>
    <string name="legal_info">Legal information</string>
    <string name="reset_data_settings">Reset app</string>
    <string name="reset_app_confirm_header">Reset app?</string>
    <string name="reset_app_confirm_descr">This action will reset all data on the app, including your Collection, your settings, and your user profile. You can\'t undo this operation!</string>
    <string name="copyright" translatable="false">Copyright © 2021 Ryanhtech Labs</string>
    <string name="v_name">Version</string>
    <string name="v_code">Build number</string>
    <string name="debug_build">Debug build - Do not use in production!</string>
    <string name="stable_version">Stable version</string>
    <string name="regenerate">Throw the dice</string>
    <string name="instructions_egg">Click on the button to throw the dice!</string>
    <string name="add_collection">Add new words to your Collection</string>
    <string name="quiz">Quiz</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="profile">Profile</string>
    <string name="words_collection_n">Words in your Collection</string>
    <string name="average_n">Vocabulary average</string>
    <string name="quiz_v">Finished quizzes</string>
    <string name="words_a_v">Words mastered</string>
    <string name="words_diff_v">Difficult words</string>
    <string name="reminders_r_v">Reminders received</string>
    <string name="check_collection">Go to your Collection</string>
    <string name="take_quiz">Take a quiz</string>
    <string name="see_profile">See profile</string>
    <string name="quiz_spanish" translatable="false">¿Quieres hacer un quiz?</string>
    <string name="quiz_presentation">Do you want to make a quiz?</string>
    <string name="start">Start</string>
    <string name="manage_planification">Manage planification</string>
    <string name="edit_profile">Edit profile</string>
    <string name="eula_description">This software comes with an EULA, or End-User License Agreement. This EULA helps you understaind how to use this software legally. Vocabulario is licensed under the Apache License, version 2.0, an open-source license. If you do not accept it, uninstall this software.</string>
    <string name="view_license">View license</string>
    <string name="apache_license_url" translatable="false">https://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="please_wait">Please wait…</string>
    <string name="setup_place_title">Where will this device be used?</string>
    <string name="place_home">At home</string>
    <string name="place_school">At school</string>
    <string name="place_home_desc">If you choose this option, you will be able to create an user profile, and get reminders to check out your vocabulary.</string>
    <string name="place_school_desc">If you choose this option, this application will be protected by an admin password known by the computer administrator and/or other school employees. Students won\'t be able to apply changes to settings without the admin password. No user profile will be created.</string>
    <string name="admin_config">App administration configuration</string>
    <string name="admin_config_descr">"Please set these settings carefully. You won't be able to change them without a full application reinstall .    "</string>
    <string name="admin_pwd">Admin password</string>
    <string name="admin_pwd_desc">This password will be required while performing actions you select below to protect the application.</string>
    <string name="admin_pwd_when">When do you want a confirmation?</string>
    <string name="admin_pwd_when_desc">Select when you want to confirm the access to different settings using the checkboxes below.</string>
    <string name="protect_reset_admin">When the app is about to reset</string>
    <string name="protect_settings_admin">When accessing to settings</string>
    <string name="protect_words_admin">When the user adds words in the Collection</string>
    <string name="id_information_admin">Identity</string>
    <string name="place_name">School name</string>
    <string name="admin_permission_required">Go and find an adult</string>
    <string name="admin_permission_owner">"This device is managed by "</string>
    <string name="id_quest">Who are you?</string>
    <string name="enter_name">Name</string>
    <string name="level_default">Super easy</string>
    <string name="features">Features</string>
    <string name="features_desc">Select the features you want to use in Vocabulario, and click on Next.</string>
    <string name="suggestions">Suggestions</string>
    <string name="spn_letters_feature">Spanish Letters</string>
    <string name="spn_letters_feature_desc">This option will display special spanish letters above the keyboard that you can use when you add new spanish words to your Collection. It is recommended to select it if you don\'t have them on your phone\'s keyboard.</string>
    <string name="no_internet">No Internet access</string>
    <string name="no_internet_install_desc">Without an Internet connection, we can\'t set up Suggestions.</string>
    <string name="reset_app_cnsqc">This action cannot be undone.</string>
    <string name="reset_app_c_collection_e">I understaind that all my Collection will be cleared, which means that all the words in it will be cleared too.</string>
    <string name="reset_app_c_profile_e">I understaind that my user profile will be lost.</string>
    <string name="reset_app_c_reset_a">I understaind that all data assiociated with this app will be lost.</string>
    <string name="check_all_checkboxes">Please tick all the checkboxes!</string>
    <string name="app_reset_in">App will reset in…</string>
    <string name="_10">10</string>
    <string name="school_config">Set up Vocabulario for your school</string>
    <string name="emergency_mode">Something went wrong</string>
    <string name="unlock">Unlock</string>
    <string name="enter_security_code">Please enter the 6-digit security code to continue.</string>
    <string name="wrong_code">Wrong code. Please try again.</string>
    <string name="empty_security_code" translatable="false">- - - - - -</string>
    <string name="emergency_mode_text_descr">An error report has been sent to us, and we will use it to fix our app in updates to come. If this is the first time you see this screen, click on Close. Else, click on Repair to see what you can do.</string>
    <string name="close">Close</string>
    <string name="repair">Repair</string>
    <string name="quiz_settings">Quiz settings</string>
    <string name="quiz_settings_descr">Change quiz reminders, add a break for the holidays, manage known words or reset the level of each word.</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="short_quiz_session_nbr" translatable="false">7</string>
    <string name="long_quiz_session_nbr" translatable="false">12</string>
    <string name="save_in_average">Save results in average</string>
    <string name="save_in_average_descr">It is recommended to select this option to track your results in time. Do not select this if you don\'t want to change your average after this quiz.</string>
    <string name="number_of_questions_descr">We recommend answering at 12 questions daily, but if you don\'t have enough time, you can answer at 7 instead.</string>
    <string name="music_distraction">Music could distract you</string>
</resources>