<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021-2022 Ryanhtech Labs
  ~
  ~ This Software (Vocabulario) is licensed under the RHT-PSLA
  ~ license (Ryanhtech Proprietary Software License Agreement).
  ~ You must not use this Software or this source code if you
  ~ don't comply with this license.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeNavBarItem"
        android:title="@string/home"
        android:icon="@drawable/ic_round_home_24" />

    <item
        android:id="@+id/collectionNavBarItem"
        android:title="@string/collection"
        android:icon="@drawable/ic_round_format_list_bulleted_24" />

    <item
        android:id="@+id/quizNavBarItem"
        android:title="@string/quiz"
        android:icon="@drawable/ic_round_quiz_24" />

    <item
        android:id="@+id/profileNavBarItem"
        android:title="@string/profile"
        android:icon="@drawable/ic_round_perm_identity_24" />

</menu>