<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021-2022 Ryanhtech Labs
  ~
  ~ This Software (Vocabulario) is licensed under the RHT-PSLA
  ~ license (Ryanhtech Proprietary Software License Agreement).
  ~ You must not use this Software or this source code if you
  ~ don't comply with this license.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/block_bkg"
    tools:context=".internal.block.UnlockAppSecurityCodeActivity">

    <Button
        android:id="@+id/backButtonUnlock"
        style="?attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/catamaran_semibold"
        android:text="@string/back"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/catamaran_light"
        android:text="@string/enter_security_code"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unlockAppSecurityCodeTitle" />

    <TextView
        android:id="@+id/unlockAppSecurityCodeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/catamaran_extrabold"
        android:text="@string/unlock"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unlockSecCodeDeviceId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/catamaran_extrabold"
        android:text="@string/please_wait"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView31"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <EditText
        android:id="@+id/enterSecurityCodeEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        tools:ignore="SpeakableTextPresentCheck"
        android:labelFor="@id/unlockAppSecurityCodeTitle"
        android:hint="@string/empty_security_code"
        android:textColorHint="@color/really_not_important_text"/>

    <TextView
        android:id="@+id/wrongCodeInfoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/catamaran_semibold"
        android:text="@string/wrong_code"
        android:textColor="#F44336"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/enterSecurityCodeEditText"
        app:layout_constraintStart_toStartOf="@+id/enterSecurityCodeEditText"
        app:layout_constraintTop_toBottomOf="@+id/enterSecurityCodeEditText"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>