<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021-2022 Ryanhtech Labs
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_round_music_note_24"
            app:tint="@color/basic_text" />

        <TextView
            style="@style/DescriptionTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/music_distraction"
            android:textColor="@color/basic_text"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/TileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="0"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/catamaran_extrabold"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/number_of_questions"
                    android:textColor="@color/title_text"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="0"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/shortQuizSessionRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/quiz_tint"
                        android:checked="true"
                        android:fontFamily="@font/catamaran_semibold"
                        android:paddingStart="0dp"
                        android:paddingEnd="4dp"
                        android:text="@string/short_quiz_session_nbr"
                        android:textColor="@color/title_text" />

                    <RadioButton
                        android:id="@+id/longQuizSessionRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/quiz_tint"
                        android:fontFamily="@font/catamaran_semibold"
                        android:text="@string/long_quiz_session_nbr"
                        android:textColor="@color/title_text" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:fontFamily="@font/catamaran_semibold"
                android:text="@string/number_of_questions_descr"
                android:textColor="@color/basic_text"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/saveInAverageQuizOptions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:fontFamily="@font/catamaran_extrabold"
                android:text="@string/save_in_average"
                android:textColor="@color/title_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/catamaran_semibold"
                android:text="@string/save_in_average_descr"
                android:textColor="@color/basic_text"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/TileStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    style="@style/TitleTextViewStyleInLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quiz_settings" />

                <ImageView
                    style="@style/ArrowIconInTileStyle"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
                    app:tint="@color/title_text" />
            </LinearLayout>

            <TextView
                style="@style/DescriptionTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz_settings_descr"
                android:textColor="@color/basic_text" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>