<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021-2022 Ryanhtech Labs
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:textAlignment="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".setup.fragment.SetupEulaFragment">

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/homeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary_colour"
                android:checked="true"
                android:fontFamily="@font/catamaran_extrabold"
                android:text="@string/place_home"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/homeRadioButtonDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/catamaran_semibold"
                android:paddingStart="30dp"
                android:paddingEnd="0dp"
                android:text="@string/place_home_desc"
                android:textColor="@color/basic_text" />

            <RadioButton
                android:id="@+id/schoolRadioButtonChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/primary_colour"
                android:checked="false"
                android:fontFamily="@font/catamaran_extrabold"
                android:text="@string/place_school"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/schoolRadioButtonChoiceDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/catamaran_semibold"
                android:paddingStart="30dp"
                android:paddingEnd="0dp"
                android:text="@string/place_school_desc"
                android:textColor="@color/basic_text" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>