<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021-2022 Ryanhtech Labs
  ~
  ~ This Software (Vocabulario) is licensed under the RHT-PSLA
  ~ license (Ryanhtech Proprietary Software License Agreement).
  ~ You must not use this Software or this source code if you
  ~ don't comply with this license.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.DangerousOperationActivity"
        android:background="@drawable/view_round">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_app_confirm_header"
                android:fontFamily="@font/catamaran_semibold"
                android:textSize="20sp"
                android:textColor="@color/title_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_app_confirm_descr"
                android:fontFamily="@font/catamaran_light"
                android:textColor="@color/basic_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <Button
                android:id="@+id/cancelDangerousOperation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:fontFamily="@font/catamaran_semibold"
                android:textAllCaps="false"
                android:textColor="@color/title_text"
                style="?attr/borderlessButtonStyle"
                android:paddingEnd="50dp"
                android:paddingStart="50dp" />

            <Button
                android:id="@+id/doDangerousOperation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_data_settings"
                android:fontFamily="@font/catamaran_semibold"
                android:textAllCaps="false"
                android:enabled="false"
                android:textColor="@color/white"
                android:backgroundTint="@color/design_default_color_error" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>