<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021-2022 Ryanhtech Labs
  ~
  ~ This Software (Vocabulario) is licensed under the RHT-PSLA
  ~ license (Ryanhtech Proprietary Software License Agreement).
  ~ You must not use this Software or this source code if you
  ~ don't comply with this license.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".internal.crashhandler.CrashHandlerUserChoiceActivity">

    <Button
        android:id="@+id/repairAppLaunchButton"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/catamaran_semibold"
        android:text="@string/repair"
        android:textAllCaps="false"
        android:textColor="@color/title_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon_inapp" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/catamaran_semibold"
        android:text="@string/emergency_mode"
        android:textAlignment="center"
        android:textColor="@color/title_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/catamaran_light"
        android:text="@string/emergency_mode_text_descr"
        android:textAlignment="center"
        android:textColor="@color/basic_text"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <Button
        android:id="@+id/closeCrashHandlerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/catamaran_semibold"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>